[package]
name = "temp-inst"
version = "0.1.0"
authors = ["Sebastian Reichelt <SebastianR@gmx.de"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["std"]
std = []
either = ["dep:either"]

[dependencies]
either = { version = "1.13.0", default-features = false, optional = true }
